--- a/teammanager/build.gradle
+++ b/teammanager/build.gradle
@@ -31,14 +31,18 @@ repositories {
 
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
+	/*compile('org.springframework.boot:spring-boot-starter-data-rest')*/
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
 	runtime('com.h2database:h2')
+	compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.3'
 }
+
+
