--- a/teammanager/build.gradle
+++ b/teammanager/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile group: 'org.webjars', name: 'bootstrap', version: '3.2.0'
 	/*compile('org.springframework.boot:spring-boot-starter-data-rest')*/
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
 	runtime('com.h2database:h2')
