add letter, add letter by person

--- a/teammanager/src/main/resources/application.properties
+++ b/teammanager/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.mail.host = smtp.mail.ru
+spring.mail.username = antur1977@mail.ru
+spring.mail.password = reno4680
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class =javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+
+#spring.mail.port=465
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.from=antur1977@mail.ru
+#mail.host=smtp.mail.ru
+#mail.port=465
+#mail.username=uhb0f84h@mail.ru
+#mail.password=dhg9j49h0gnj904h
+#mail.from=uhb0f84h@mail.ru
+#mail.protocol=smtps
+#mail.smtps.auth=true
 
