--- a/teammanager/build.gradle
+++ b/teammanager/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile group: 'org.webjars', name: 'bootstrap', version: '3.2.0'
+//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.5.9.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
 	/*compile('org.springframework.boot:spring-boot-starter-data-rest')*/
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
 	runtime('com.h2database:h2')
