create mail service

--- a/teammanager/src/main/resources/application.properties
+++ b/teammanager/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.mail.host = smtp.mail.ru
-spring.mail.username = antur1977@mail.ru
-spring.mail.password = reno4680
+#spring.mail.username = antur1977@mail.ru
+#spring.mail.password = reno4680
+spring.mail.username = sokoldemian@mail.ru
+spring.mail.password = demian1990
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class =javax.net.ssl.SSLSocketFactory
